# asam-osi-idp

./: .gitignore  Dockerfile  README.md  clothoid.py  curvature.py  deprecated_handler.py  example.env  geometry.py  lane.py  lanegraph.py  osi_extractor.py  osi_iterator.py  osi_trace.py  pyproject.toml  road.py  road_merger.py  shell.nix  signals.py  sources.txt  speedlimit_logic.py  state.py  state_builder.py  udp_driver_follow_trajectory.py  vehicle_update_sender.py
cognibit_xodr/: autobahn2_1.xodr  autobahn2_1_strange_speedlimits.xodr  autobahn2_new_1.xodr  autobahn_1.xodr  autobahn_new_1.xodr  circle_1.xodr  loop4_1.xodr  loop_1.xodr  merge_straight_1.xodr  straight_1.xodr  straight_2l_1.xodr
demo/: driver.py  main.py
demo/scenario/: soderleden_speedlimit.xodr  speedlimit_demo.xosc
output/: _osi_trace_output_sender.py  _raw_update.py  driver_update.py  esmini_output_sender.py  osi_trace_output_sender.py  output_sender.py  raw_update.py
own_xosc/: autobahn2_1.xosc  autobahn2_1_udp.xosc  autobahn2_new_1.xosc  autobahn_1.xosc  autobahn_new_1.xosc  circle_1.xosc  loop4_1.xosc  loop_1.xosc  merge_straight_1.xosc  straight_2l_1.xosc
resources/: soderleden.xodr
signals/: __init__.py  assignment.py  roadsignal.py
src/osi_extractor/: __init__.py  __main__.py  curvature.py  geometry.py  lane.py  lanegraph.py  old_geometry.py  osi_extractor.py  osi_iterator.py  road.py  signals.py  speed.py  speedlimit_logic.py  state.py  state_builder.py  vehicle_update.py
src/osi_extractor/output/: esmini_output_sender.py  esmini_update.py  output_sender.py
